Refactor PersonServiceImpl for role management and enrichment
Refactor PersonServiceImpl to improve role handling and enrich person data.